// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar tests getAccordion should return accordion markup 1`] = `
<ul
  className="accordion"
  onClick={[Function]}
>
  <li>
    <Link
      replace={false}
      to="/dashboard"
    >
      My Dashboard
    </Link>
  </li>
  <li>
    <Link
      replace={false}
      to="/activities"
    >
      Activities
    </Link>
  </li>
  <li>
    <Link
      replace={false}
      to="/member-check-in"
    >
      Member check-in
    </Link>
  </li>
  <li
    className="line"
  >
    <Button
      id="myProfile"
      kind="secondary"
      onClick={[Function]}
      size="small"
      type="button"
    >
      My Profile
    </Button>
  </li>
  <li>
    <Button
      id="logout"
      kind="secondary"
      onClick={[Function]}
      size="small"
      type="button"
    >
      Log out
    </Button>
  </li>
</ul>
`;

exports[`Navbar tests getSkinnyHeaderMarkup should return skinny header markup 1`] = `
<div
  className="header skinny"
>
  <ul>
    <li
      className="poodl"
    >
      <Link
        replace={false}
        to="/dashboard"
      >
        Poodl
      </Link>
    </li>
    <li
      className="right menu"
    >
      <Button
        kind="tertiary"
        onClick={[Function]}
        size="small"
        type="button"
      >
        <i
          className="material-icons"
        >
          menu
        </i>
      </Button>
    </li>
  </ul>
</div>
`;

exports[`Navbar tests render should render links for logged in admins 1`] = `
<div
  className="header"
>
  <ul>
    <li
      className=""
    >
      <Link
        replace={false}
        to="/dashboard"
      >
        Poodl
      </Link>
    </li>
    <li
      className="right"
      style={
        Object {
          "marginTop": "0.7em",
        }
      }
    >
      <OnClickOutside(Dropdown)
        align="right"
        arrow={true}
        buttonContent="Frank Limb"
        dropdownContent={
          Array [
            Object {
              "content": "Dashboard",
              "onClick": [Function],
            },
            Object {
              "content": "My profile",
              "onClick": [Function],
            },
            Object {
              "type": "divider",
            },
            Object {
              "content": "Log out",
              "onClick": [Function],
            },
          ]
        }
        eventTypes={
          Array [
            "mousedown",
            "touchstart",
          ]
        }
        excludeScrollbar={false}
        kind="secondary"
        outsideClickIgnoreClass="ignore-react-onclickoutside"
        preventDefault={false}
        size="small"
        stopPropagation={false}
      />
    </li>
    <li
      className="right"
    >
      <Link
        replace={false}
        to="/dashboard"
      >
        My Dashboard
      </Link>
    </li>
    <li
      className="right"
    >
      <Link
        replace={false}
        to="/activities"
      >
        Activities
      </Link>
    </li>
    <li
      className="right"
    >
      <Link
        replace={false}
        to="/member-check-in"
      >
        Member check-in
      </Link>
    </li>
  </ul>
</div>
`;

exports[`Navbar tests render should render links for nobody logged in 1`] = `
<div
  className="header"
>
  <ul>
    <li
      className=""
    >
      <Link
        replace={false}
        to="/"
      >
        Poodl
      </Link>
    </li>
    <li
      className="right"
    >
      <Link
        replace={false}
        to="/login"
      >
        Log in
      </Link>
    </li>
  </ul>
</div>
`;

exports[`Navbar tests render should render member check-in header 1`] = `
<div
  className="header check-in-header"
>
  <h1
    className="check-in-title"
  >
    Member check in
  </h1>
</div>
`;

exports[`Navbar tests render should render skinny header 1`] = `
<div
  className="header skinny"
>
  <ul>
    <li
      className="poodl"
    >
      <Link
        replace={false}
        to="/dashboard"
      >
        Poodl
      </Link>
    </li>
    <li
      className="right menu"
    >
      <Button
        kind="tertiary"
        onClick={[Function]}
        size="small"
        type="button"
      >
        <i
          className="material-icons"
        >
          menu
        </i>
      </Button>
    </li>
  </ul>
</div>
`;
